--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="46dp"
         android:layout_marginEnd="47dp"
-        android:layout_marginBottom="22dp"
         android:text="Enquête de Satisfaction"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
@@ -42,15 +41,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"
-        android:layout_marginBottom="43dp"
         android:text="Merci d'avoir utilisé notre service ! \nNous cherchons toujours à nous améliorer \naccepteriez-vous de participer à notre enquête?"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="17sp"
+        app:layout_constraintBottom_toTopOf="@+id/idInscription"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
-
 
 
     <Button
@@ -58,13 +56,30 @@
         android:layout_width="321dp"
         android:layout_height="45dp"
         android:layout_marginStart="37dp"
+        android:layout_marginTop="152dp"
         android:layout_marginEnd="53dp"
-        android:layout_marginBottom="202dp"
+        android:layout_marginBottom="28dp"
         android:background="#213F8F"
-        android:text="je m'inscris"
+        android:text="Inscription"
+        app:layout_constraintBottom_toTopOf="@+id/idResultat"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <Button
+        android:id="@+id/idResultat"
+        android:layout_width="321dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="37dp"
+        android:layout_marginEnd="53dp"
+        android:layout_marginBottom="128dp"
+        android:background="#213F8F"
+        android:text="Resultat"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/idInscription" />
 
     <TextView
         android:id="@+id/textView3"
