modification des boutons

--- a/app/src/main/res/layout/activity_inscription.xml
+++ b/app/src/main/res/layout/activity_inscription.xml
@@ -196,7 +196,9 @@
         android:layout_marginTop="57dp"
         android:layout_marginEnd="60dp"
         android:layout_marginBottom="68dp"
+        android:background="#213F8F"
         android:text="Allez à l'enquête"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
