--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,41 +25,42 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="46dp"
-        android:layout_marginEnd="47dp"
+        android:layout_marginStart="99dp"
+        android:layout_marginEnd="100dp"
         android:text="Enquête de Satisfaction"
         android:textColor="#FFFFFF"
-        android:textSize="30sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginStart="57dp"
+        android:layout_marginEnd="57dp"
         android:text="Merci d'avoir utilisé notre service ! \nNous cherchons toujours à nous améliorer \naccepteriez-vous de participer à notre enquête?"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="17sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/idInscription"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-
     <Button
         android:id="@+id/idInscription"
         android:layout_width="321dp"
         android:layout_height="45dp"
-        android:layout_marginStart="37dp"
+        android:layout_marginStart="45dp"
         android:layout_marginTop="152dp"
-        android:layout_marginEnd="53dp"
+        android:layout_marginEnd="45dp"
         android:layout_marginBottom="28dp"
         android:background="#213F8F"
+        android:textColor="#FFFFFF"
         android:text="Inscription"
         app:layout_constraintBottom_toTopOf="@+id/idResultat"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,10 +71,11 @@
         android:id="@+id/idResultat"
         android:layout_width="321dp"
         android:layout_height="45dp"
-        android:layout_marginStart="37dp"
-        android:layout_marginEnd="53dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginEnd="45dp"
         android:layout_marginBottom="128dp"
         android:background="#213F8F"
+        android:textColor="#FFFFFF"
         android:text="Resultat"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,12 +85,12 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="403dp"
+        android:layout_width="415dp"
         android:layout_height="43dp"
         android:layout_marginStart="2dp"
         android:layout_marginEnd="6dp"
         android:background="#213F8F"
-        android:text="Application SNCF - 2023"
+        android:text="Application Disneyland - 2023"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
