--- a/app/src/main/res/layout/activity_page2.xml
+++ b/app/src/main/res/layout/activity_page2.xml
@@ -69,8 +69,8 @@
 
     <RadioGroup
         android:id="@+id/idEntretien"
-        android:layout_width="231dp"
-        android:layout_height="138dp"
+        android:layout_width="233dp"
+        android:layout_height="96dp"
         android:layout_marginStart="47dp"
         android:layout_marginEnd="133dp"
         android:layout_marginBottom="17dp"
@@ -105,7 +105,7 @@
     <RadioGroup
         android:id="@+id/idAttente"
         android:layout_width="231dp"
-        android:layout_height="138dp"
+        android:layout_height="95dp"
         android:layout_marginStart="47dp"
         android:layout_marginEnd="133dp"
         android:layout_marginBottom="27dp"
@@ -146,6 +146,8 @@
         android:layout_marginEnd="156dp"
         android:layout_marginBottom="20dp"
         android:text="Suivant"
+        android:background="#213F8F"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/textView13"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
