--- a/app/src/main/res/layout/activity_page3.xml
+++ b/app/src/main/res/layout/activity_page3.xml
@@ -16,6 +16,8 @@
         android:layout_marginEnd="156dp"
         android:layout_marginBottom="21dp"
         android:text="Suivant"
+        android:background="#213F8F"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/textView15"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
