--- a/app/src/main/res/layout/activity_resultat.xml
+++ b/app/src/main/res/layout/activity_resultat.xml
@@ -4,6 +4,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Resultat">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:background="#778899"
+    tools:context=".Resultat"/>
